# learn-drf

./: README.md  dump.rdb  pyproject.toml
backend/: celerybeat-schedule.db  db.sqlite3  schema.yml
backend/log/: admin.py  models.py  permissions.py  schema.py  serializers.py  tasks.py  urls.py  views.py
backend/log/migrations/: 0001_initial.py  0002_log_vehicle.py  0003_alter_log_owner.py
backend/myproject/: celery.py  settings.py  urls.py
backend/vehicle/: models.py  urls.py  views.py
backend/vehicle/migrations/: 0001_initial.py
frontend/: angular.json  index.html  index.js  package-lock.json  package.json
frontend-app-leanr/: README.md  angular.json  package-lock.json  package.json
frontend-app-leanr/src/: index.html
frontend-app-leanr/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
frontend-app-leanr/src/app/components/login/: login.component.css  login.component.html  login.component.ts
frontend-app-leanr/src/app/components/navbar/: navbar.component.css  navbar.component.html
frontend-app-leanr/src/app/components/signup/: signup.component.html  signup.component.ts
frontend-app-leanr/src/app/services/: rest-api.service.ts
frontend-app-leanr/src/app/types/: createUser.ts
frontend/src/app/: app.component.html  app.component.ts  todo.ts
frontend/src/app/myComponent/add-todo/: add-todo.component.html  add-todo.component.ts
frontend/src/app/myComponent/todo-item/: todo-item.component.html  todo-item.component.ts
frontend2/first-app/: package-lock.json
frontend2/first-app/src/app/: app.component.html  app.component.ts
(+17 files in other folders)
